--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Splash + Account + Navigation Drawer With Room (ORM)</string>
+    <string name="app_name">Example App</string>
 </resources>
